--- a/README.Rmd
+++ b/README.Rmd
@@ -12,6 +12,20 @@ knitr::opts_chunk$set(
   out.width = "100%"
 )
 ```
+---
+output: github_document
+---
+
+<!-- README.md is generated from README.Rmd. Please edit that file -->
+
+```{r, include = FALSE}
+knitr::opts_chunk$set(
+  collapse = TRUE,
+  comment = "#>",
+  fig.path = "man/figures/README-",
+  out.width = "100%"
+)
+```
 
 # mfutils
 
@@ -28,9 +42,10 @@ These functions can be sorted into different categories:
 - __plotting__ (mostly ggplot2 enhancements)
 - tools for implementing __representational similarity analysis (RSA)__, including spatial prewhitening and various distance measures
 - convenience functions for working with __gifti__ objects from the `gifti` package (for surface fMRI data)
+- as well as functions that enforce a standardized way to use __parcellation atlases__
 
-Although these categories are pretty different, I currently prefer to have all of these functions within a single package (rather than a separate package, e.g., for RSA), as there doesn't seem to be any benefit to splitting them up at this point.
-
+Currently, I prefer to have all of these functions within a single package.
+As this package becomes more developed, I may split off encapsulated sets of functions into separate packages.
 
 ## Installation
 
